...
    <item
        android:id="@+id/nav_summary"
        android:title="Summary"
        android:icon="@drawable/summary"/>
        -->
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="History" />

    <!-- Center (+) create -->
    <item
        android:id="@+id/nav_create_event"
...
