<?xml version="1.0" encoding="utf-8"?>
<!--author: waylon -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/scrollContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Entrants list -->
            <LinearLayout
                android:id="@+id/selectedContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnCancelSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:text="Cancel Selected Entrants"
        android:textColor="@color/white"
        android:backgroundTint="@color/danger_red"
        android:fontFamily="@font/sfpro_semibold"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />
    <Button
        android:id="@+id/btnSendNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="Notify Selected Entrants"
        android:textColor="@color/white"
        android:backgroundTint="@color/pink_bg"
        android:fontFamily="@font/sfpro_semibold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>