<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="posterCard" type="id" />
    <item name="notificationMessageInput" type="id"/>
</resources>